--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "db:up": "drizzle-kit up"
   },
   "dependencies": {
+    "@ai-sdk/mistral": "^1.0.8",
     "@ai-sdk/openai": "1.0.6",
     "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/lang-python": "^6.1.6",
